--- a/TODO
+++ b/TODO
@@ -22,3 +22,7 @@ allow multi select on the results list, to show multiple entries?
 
 BUGS:
 the sample test ej,je dict shows twice as many entries as it should (misdetermining entry endpoint)
+resize book select on switch
+
+epywing bugs:
+need to change < and > to entities if theyre part of the text
