--- a/TODO
+++ b/TODO
@@ -1,25 +1,32 @@
 
 TODO:
 
-show the heading inside the text if there is no keyword in (or at the top of) the text
-
-renamable labels for books
-
-combine ~suffix entries back into main entry somehow (probably per dictionary, after detecting which dict it is)
-
-drag-n-drop for folders into the Preferences table to install a dictionary
-?drag-n-drop reordering of dicts
+refactor style sheet resources, and look at the dictionary.app ones
 
 
 better subbook handling?
 when setting the search field to the result selected (like when they press enter), it should not include any special notation characters like the superscript 1 etc
 
-shorter IDs for books. possibly store these in a dotfile in the epwing dir so it's not path-dependent
 
 
-on-hover of links, show the entry's title or something
 
 custom horizontal scrollbar for webview so that it doesn't overlap the corner
+
+TODO LATER:
+on-hover of links, show the entry's title or something
+
+shorter IDs for books. possibly store these in a dotfile in the epwing dir so it's not path-dependent
+
+renamable labels for books
+
+show the heading inside the text if there is no keyword in (or at the top of) the text
+
+drag-n-drop for folders into the Preferences table to install a dictionary
+?drag-n-drop reordering of dicts
+
+combine ~suffix entries back into main entry somehow (probably per dictionary, after detecting which dict it is)
+
+
 
 IDEAS:
 allow multi select on the results list, to show multiple entries?
