--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ TODO:
 
 refactor style sheet resources, and look at the dictionary.app ones
 
+need inactive toolbar button images
 
 better subbook handling?
 when setting the search field to the result selected (like when they press enter), it should not include any special notation characters like the superscript 1 etc
@@ -34,6 +35,9 @@ File->New Window support
 
 File->Print
 
+Window menu for mac
+
+list of dictionaries when no entry is shown, in entryView, like Dictionary.app
 
 IDEAS:
 allow multi select on the results list, to show multiple entries?
